--- a/Login.resx
+++ b/Login.resx
@@ -2042,7 +2042,7 @@
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAEAAAABAACAYAAADyoyQXAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAA/7JJREFUeF7s/QuUXVdi0Hlf+e1221LdvW/JdrujjnHSGTvpDinaLdXe5Qq0DCaJ
+        DwAACw8BkvkDpQAA/7JJREFUeF7s/QuUXVdi0Hlf+e1221LdvW/JdrujjnHSGTvpDinaLdXe5Qq0DCaJ
         gMAUw0AiAvk+rTVrIGIgjHh9RMwHgyYzYY1gyKAkQ0AMkIhheAi+mUEhhrS6QxIlOLRkWXefq2qpbffb
         bbvbT1mqb5/SkVsu3e72Q496/H5r/de9VVYetqrO3ufcvc/pAQAAAAAAAMBqcaQ3deOp9Xniibtm44nJ
         fO9wMP1bmpinFgv5I6N+3tr00+8vgzzXVr+/46ulnfXP7GobhfTnSsx7Xi+kvfXP7FsspJ+qf+bAheo/
@@ -7565,7 +7565,7 @@
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAEAAAABAACAYAAADyoyQXAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAA/7JJREFUeF7s3U+MXdddwPFnt0na/LE775w3jtM/oSZtwaatxCip43PsYeFANmaF
+        DwAACw8BkvkDpQAA/7JJREFUeF7s3U+MXdddwPFnt0na/LE775w3jtM/oSZtwaatxCip43PsYeFANmaF
         absxlMVsgHpXA0WVaRcYgRBegaVSkEEsTNWqmJ0REch0NbQB7MR+5z47dpuItmlSSto0duzh3PFNMxm/
         lPzxn/nz+Uhf3ffGozh+7757z1v87u0BAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -10875,7 +10875,7 @@
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAEAAAABAACAYAAADyoyQXAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAA/7JJREFUeF7s3QuYXddB2Ptj+Z3YluesdUaWY2JiHCB2kxAmiaVZazQtyNSQOIUU
+        DwAACw8BkvkDpQAA/7JJREFUeF7s3QuYXddB2Ptj+Z3YluesdUaWY2JiHCB2kxAmiaVZazQtyNSQOIUU
         0RJAUCgCUsCFPMTzIqAN+nIvtA4krSiP4lseVS+PRCGEuq1T6rakEcQEKfKctY9li9h5OQ5xcOL33LXH
         W0YeHzt+SJrX7/d9/2+fOVIce2bP2evss9faPQAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
         AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
@@ -15422,4 +15422,7 @@
         e3q9/x8WFTXjy9DxcwAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="backgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
