--- a/VIEW/Order.resx
+++ b/VIEW/Order.resx
@@ -161,7 +161,7 @@
         IPgPR3Of+vGr52EAAAAASUVORK5CYII=
 </value>
   </data>
-  <data name="btnAccout.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="btnAccount.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAABGdBTUEAALGPC/xhBQAAA0ZJREFUaEPt
         mVtr1EAUx+P9LnVnshUVqeiD4IOXIrI7M2WfFB8KilbFD6BQUfBFBfXBClYQFf0IPmjVb6APggj64Iti
